# django-cache-mock

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: python-package.yml
django_cache_mock/: __init__.py  exceptions.py  mock.py
django_cache_mock/backends/: memcached.py  redis.py
django_cache_mocks/backends/: redis.py
tests/: conftest.py  test_backends.py  test_mock.py  test_thread_with_exceptions.py  thread_with_exceptions.py
tests/testapp/: settings.py
