[tool.poetry]
name = "django-cache-mock"
version = "0.0.2"
description = ""
authors = ["Iuri de Silvio <iurisilvio@gmail.com>"]
readme = "README.md"
packages = [{include = "django_cache_mock"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3 || ^4"
mockcache = { url = "https://github.com/buserbrasil/mockcache/archive/28fcd581ed185095cc93529954b5fceb704c1a34.zip", optional = true }
fakeredis = { version = "*", optional = true }
redislite = { version = "*", optional = true }
django-redis = { version = "*", optional = true }

[tool.poetry.group.dev.dependencies]
flake8 = "<5"
pytest = "^7.2.0"
pytest-black = "^0.3.12"
pytest-cov = "^4.0.0"
pytest-flake8 = "^1.1.1"
pytest-isort = "^3.1.0"

[tool.poetry.extras]
mockcache = ["mockcache"]
fakeredis = ["fakeredis"]
redislite = ["redislite"]
django-redis = ["django-redis"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
skip_covered = true
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --black --flake8 --isort"
filterwarnings = ["ignore::DeprecationWarning", "ignore::pytest.PytestWarning"]
