[tool.poetry]
name = "django-cache-mock"
version = "0.0.0"
description = ""
authors = ["Iuri de Silvio <iurisilvio@gmail.com>"]
readme = "README.md"
packages = [{include = "django_cache_mock"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3 || ^4"
mockcache3 = { version = "*", optional = true }
fakeredis = { version = "*", optional = true }
redislite = { version = "*", optional = true }
django-redis = { version = "*", optional = true }
pytest-ruff = "^0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-black = "^0.3.12"
pytest-cov = "^4.0.0"

[tool.poetry.extras]
mockcache = ["mockcache3"]
fakeredis = ["fakeredis"]
redislite = ["redislite"]
django-redis = ["django-redis"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"


[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
skip_covered = true
show_missing = true

[tool.ruff]
line_length = 88

[tool.pytest.ini_options]
addopts = "--cov --black --ruff"
filterwarnings = ["ignore::DeprecationWarning", "ignore::pytest.PytestWarning"]

[tool.poetry-dynamic-versioning]
enable = true
